# lamp-vm

./: .gitignore  CMakeLists.txt  README.md  debug.c  debug.h  fetch.h  flags.h  float.c  float.h  instruction.h  interrupt.c  interrupt.h  io.c  io.h  loadbin.c  loadbin.h  memory.c  memory.h  mmio.c  mmio.h  panic.c  panic.h  register_vm.c  stack.h  vm.c  vm.h
bios/: README.md  bios.c  boot_flat.ld
docs/: bios-build.md  bios.md  isa.md  kernel.md  posix.md
io_devices/disk/: disk.c  disk.h
io_devices/frame/: frame.c  frame.h  terminalin.c
io_devices/sysinfo/: sysinfo_mmio_register.c  sysinfo_mmio_register.h
io_devices/time/: time_mmio_register.c  time_mmio_register.h  timer.c  timer.h
io_devices/vga_display/: display.c  display.h  mmio_register.c  mmio_register.h  vga_mmio_register.c  vga_mmio_register.h
kernel/: README.md  build.sh  linker.ld
kernel/include/kernel/: console.h  console_fb.h  irq.h  platform.h  printk.h  sched.h  smp.h  spinlock.h  syscall.h  trap.h  types.h  vm_info.h
kernel/src/: console.c  console_fb.c  entry.c  fd_selftest.c  init_task.c  irq.c  panic.c  printk.c  sched.c  smp.c  spinlock.c  syscall.c  trap.c  vm_info.c
